[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/background.png" type="Texture" id=1]
[ext_resource path="res://GooseGameEasy.gd" type="Script" id=2]
[ext_resource path="res://fonts/phonetic.tres" type="Theme" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Speak" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 62.0
theme = ExtResource( 4 )
text = "Parle"

[node name="Record" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 134.0
theme = ExtResource( 4 )
text = "Enregistre"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="gridImage" type="GridContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 512.0
margin_top = 228.0
margin_right = 512.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 90
custom_constants/hseparation = 100
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/Speak" to="." method="_on_Speak_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Record" to="." method="_on_Record_pressed"]
